--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,14 @@
   </head>
   <body>
     <div id="app">
+      <h1>ToDo's</h1>
       <form @submit.prevent="addNewItem">
-        <label for="new-task">Add a new task:</label>
         <input type="text" id="new-task" v-model="newItem">
-        <input type="submit" value="Save new task">
+        <label for="high">High</label>
+        <input type="radio" class="high" name="priority" value="high">
+        <label for="low">Low</label>
+        <input type="radio" name="priority" value="low">
+        <input type="submit" value="Save task">
       </form>
       <ul>
         <li v-for="(item, index) in items" :class="item.isDone ? 'done':'notdone'">
