--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,16 @@
       <form @submit.prevent="addNewItem">
         <input type="text" id="new-task" v-model="newItem">
         <label for="high">High</label>
-        <input type="radio" id="high" name="priority" value="high">
+        <input type="radio" id="high" name="priority" v-model="picked">
         <label for="low">Low</label>
-        <input type="radio" id="low" name="priority" value="low">
+        <input type="radio" id="low" name="priority" v-model="picked">
         <input type="submit" value="Save task">
       </form>
       <ul>
         <li v-for="(item, index) in items" :class="item.isDone ? 'done':'notdone'">
-          <span v-if="item.isDone">{{ item.name }}</span>
+          <span v-if="item.isDone" @click="doTask(index)">{{ item.name }}</span>
           <span v-if="!item.isDone" @click="doTask(index)">{{ item.name }}</span>
+          <span v-if="item.priority"><img src="images/warning.png" alt="High Priority Task"></span>
         </li>
       </ul>
     </div>
